Improve incidents controller queries

--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -28,7 +28,7 @@
         </tr>
       </thead>
       <tbody>
-        <%= render partial: 'incidents/partials/list_incidents', locals: { incidents: @incidents } %>
+        <%= render partial: 'incidents/partials/list_incidents' %>
       </tbody>
     </table>
   </div>
