--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "style";
 @import "custom";
+@import "style";
 @import "animate-css";
 
 td {
@@ -88,4 +88,32 @@ td {
   left:  0px;
   width:  100%;
   height:  5px;
+}
+
+#new_backofficer, #new_analyst {
+  .control-label {
+    padding-left: 0px;
+  }
+}
+
+.logo {
+  margin-left: 10px;
+}
+
+#list_incidents {
+  th {
+    text-align: center;
+  }
+}
+
+.navbar-default {
+  margin-bottom: 0px;
+}
+
+.table thead tr th {
+  text-align: center;
+}
+
+.table tbody tr td {
+  text-align: center;
 }
