--- a/app/views/incidents/partials/show/_analyst_actions.html.erb
+++ b/app/views/incidents/partials/show/_analyst_actions.html.erb
@@ -1,22 +1,22 @@
-<%= link_to 'Iniciar Análise', analyse_incident_path(incident), method: :patch, class: "btn btn-danger #{disable_solve_button?(incident)}" %>
+<%= link_to 'Iniciar Análise', analyse_incident_path(@incident), method: :patch, class: "btn btn-danger #{disable_solve_button?}" %>
 
-<% if incident.status == Status::REOPENED %>
+<% if @incident.status == Status::REOPENED %>
   <%= '&mdash;'.html_safe %>
-  <%= link_to 'Reiniciar Análise', incident_path(incident), method: :patch, class: 'btn btn-danger' %>
-<% elsif (incident.status == Status::PENDING || incident.status == Status::REOPENED) && incident.analyst_id == current_analyst.id %>
+  <%= link_to 'Reiniciar Análise', incident_path(@incident), method: :patch, class: 'btn btn-danger' %>
+<% elsif (@incident.status == Status::PENDING || @incident.status == Status::REOPENED) && @incident.analyst_id == current_analyst.id %>
   <%= '&mdash;'.html_safe %>
-  <%= link_to 'Reiniciar Análise', incident_path(incident), method: :patch, class: 'btn btn-danger' %>
+  <%= link_to 'Reiniciar Análise', incident_path(@incident), method: :patch, class: 'btn btn-danger' %>
 
 
-<% elsif (incident.status == Status::ANALYSING || incident.status == Status::PENDING) && incident.analyst_id != current_analyst.id %>
+<% elsif (@incident.status == Status::ANALYSING || @incident.status == Status::PENDING) && @incident.analyst_id != current_analyst.id %>
   <%= '&mdash;'.html_safe %>
-  <%= link_to 'Pegar Requisição', incident_capture_path(incident), method: :patch, data: { confirm: 'Tem certeza que deseja capturar essa requisição?' }, class: 'btn btn-success' %>
+  <%= link_to 'Pegar Requisição', incident_capture_path(@incident), method: :patch, data: { confirm: 'Tem certeza que deseja capturar essa requisição?' }, class: 'btn btn-success' %>
 
-<% elsif solve_incident?(incident) %>
+<% elsif solve_incident? %>
   <%= '&mdash;'.html_safe %>
-  <%= link_to_solve_incident(incident) %>
-  <% if incident.analyst_id == current_analyst.id %>
+  <%= link_to_solve_incident %>
+  <% if @incident.analyst_id == current_analyst.id %>
     <%= '&mdash;'.html_safe %>
-    <%= link_to 'Pendente', pending_incident_path(incident), method: :get, class: 'btn btn-primary' %>
+    <%= link_to 'Pendente', pending_incident_path(@incident), method: :get, class: 'btn btn-primary' %>
   <% end %>
 <% end %>
