--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -8,5 +8,5 @@
 </div>
 
 <div class="text-center">
-  <%= render partial: current_user_actions %>
+  <%= render partial: current_user_actions, locals: { incident: @incident } %>
 </div>
