--- a/app/views/incidents/partials/show/_analyst_actions.html.erb
+++ b/app/views/incidents/partials/show/_analyst_actions.html.erb
@@ -1,14 +1,10 @@
-<%= link_to 'Iniciar Análise', incident_analyse_path(@incident), method: :patch, class: "btn btn-danger #{disable_solve_button?(@incident)}" %>
+<% if !@incident.pending? %>
+  <%= link_to 'Iniciar Análise', incident_analyse_path(@incident), method: :patch, class: "btn btn-danger #{disable_solve_button?(@incident)}" %>
+<% end %>
 
-<% if @incident.status == Status::REOPENED %>
-  <%= '&mdash;'.html_safe %>
+<% if @incident.reopened_or_pending? %>
   <%= link_to 'Reiniciar Análise', incident_path(@incident), method: :patch, class: 'btn btn-danger' %>
-<% elsif (@incident.status == Status::PENDING || @incident.status == Status::REOPENED) && @incident.analyst_id == current_analyst.id %>
-  <%= '&mdash;'.html_safe %>
-  <%= link_to 'Reiniciar Análise', incident_path(@incident), method: :patch, class: 'btn btn-danger' %>
-
-
-<% elsif (@incident.status == Status::ANALYSING || @incident.status == Status::PENDING) && @incident.analyst_id != current_analyst.id %>
+<% elsif (@incident.analysing? || @incident.pending?) && @incident.analyst_id != current_analyst.id %>
   <%= '&mdash;'.html_safe %>
   <%= link_to 'Pegar Requisição', incident_capture_path(@incident), method: :patch, data: { confirm: 'Tem certeza que deseja capturar essa requisição?' }, class: 'btn btn-success' %>
 
