--- a/app/views/incidents/pending.html.erb
+++ b/app/views/incidents/pending.html.erb
@@ -12,7 +12,7 @@
           <th>Nível de Prioridade</th>
           <th>Reportador Por</th>
           <th>Aberto Em</th>
-          <th>Status do Incidente</th>
+          <th>Status da Requisição</th>
         </tr>
         </thead>
         <tbody>
@@ -69,7 +69,7 @@
 
           <div class="form-group">
             <div class="col-md-offset-3 col-md-9">
-              <%= f.submit "Atualizar Incidente", class:"btn btn-success" do %>
+              <%= f.submit "Atualizar Requisição", class:"btn btn-success" do %>
               <% end %>
             </div>
           </div>
@@ -81,4 +81,4 @@
 
 <hr>
 
-<%= link_to 'Lista de Incidentes', incidents_path, class: "btn btn-primary" %>
+<%= link_to 'Lista de Requisições', incidents_path, class: "btn btn-primary" %>
