--- a/app/views/incidents/reopen.html.erb
+++ b/app/views/incidents/reopen.html.erb
@@ -12,7 +12,7 @@
           <th>Nível de Prioridade</th>
           <th>Reportador Por</th>
           <th>Aberto Em</th>
-          <th>Status do Incidente</th>
+          <th>Status da Requisição</th>
         </tr>
         </thead>
         <tbody>
@@ -99,4 +99,4 @@
     </div>
   </div>
 <% end %>
-<%= link_to 'Lista de Incidentes', incidents_path, class: "btn btn-primary" %>
+<%= link_to 'Lista de Requisições', incidents_path, class: "btn btn-primary" %>
