--- a/app/views/incidents/solve.html.erb
+++ b/app/views/incidents/solve.html.erb
@@ -11,7 +11,7 @@
         <th>Nível de Prioridade</th>
         <th>Reportador Por</th>
         <th>Aberto Em</th>
-        <th>Status do Incidente</th>
+        <th>Status da Requisição</th>
       </tr>
       </thead>
       <tbody>
