--- a/app/views/incidents/partials/show/_info_panel.html.erb
+++ b/app/views/incidents/partials/show/_info_panel.html.erb
@@ -14,12 +14,12 @@
     <tbody>
       <tr>
         <td><%= @incident.id %></td>
-        <td><%= raw value_for(@incident, 'priority_level') %></td>
+        <td><%= raw value_with_label_for(@incident, 'priority_level') %></td>
         <td><%= @incident.backofficer.name %></td>
         <td><%= brazil_date(@incident.created_at) %></td>
         <td><%= responsible_analyst(@incident) %> </td>
         <td><%= brazil_date(@incident.updated_at) %></td>
-        <td><%= raw value_for(@incident, 'status') %></td>
+        <td><%= raw value_with_label_for(@incident, 'status') %></td>
       </tr>
     </tbody>
   </table>
